# competitive-coding

./: CMakeLists.txt  README.md
solutions/: CMakeLists.txt
solutions/helloworld/: CMakeLists.txt  helloworld.cpp
solutions/primefactors/: CMakeLists.txt  primefactors.cpp
solutions/primetest/: CMakeLists.txt  primetest.cpp
src/c/gcj/2008/qualificationRound/ProblemA/small/: output.txt  problemA.c  readme.txt
src/c/gcj/2011/qualificationRound/ProblemA/small/: problemA.c  readme.txt
src/c/gcj/2011/qualificationRound/ProblemB/small/: problemB.c  readme.txt
src/c/helloWorld/: HelloWorld.c
